--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Artificial intelligence
     <h5 align="center">
 	<font size="7" color="#C2C0C0" >
 	
-	made by Abdullah Alhamy 
+	made by Abdullah Elhamy 
 	
 	</font>
 	</h5>
